fix: improve shortcode button styles
-surround button text with span that is hidden at certain resolutions (prevents overlapping with columns)
-change icon color to match button text color

--- a/assets/src/css/admin/forms.scss
+++ b/assets/src/css/admin/forms.scss
@@ -151,14 +151,17 @@ Shortcode Copy & Paste
 		font-size: 16px;
 		width: 16px;
 		vertical-align: middle;
-		color: #909090;
+		color: #0071a1;
 		margin-right: 2px;
 	}
 
-	&:hover .dashicons {
-		color: #555;
-	}
+}
 
+// Hide 'copy shortcode' text at certain resolutions
+@media only screen and (min-width: 782px) and (max-width: 1232px) {
+	.give-shortcode-button-text {
+		display: none;
+	}
 }
 
 //-------------------------------------
